# kk_company_info

./: .gitignore  README.md  company_info.py  company_names.csv  pyproject.toml
